# Fractal-Delay

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.cursor/rules/: cpp-clean-code.mdc  fractal-delay-global.mdc
.cursor/skills/clickup-github-ticket-workflow/: SKILL.md  reference.md
.github/workflows/: ci.yml
Plans/: 00-convencoes-repo-ui-testes.md  00-cpp-clean-code.md  00-testes-unitarios-visao-geral.md  README.md
Plans/fase-1-motor-delay-basico/: 01-configuracao-projeto-juce.md  02-buffer-circular-delay.md  03-sincronizacao-bpm-host.md  04-modos-clean-tape.md  05-ui-parametros-motor-delay-basico.md
Plans/fase-2-feedback-engine/: 01-saturacao-soft-clipping-feedback.md  02-filtros-low-cut-high-cut-loop.md  03-stereo-crossfeed-modulacao-delay.md  04-compasso-tempo-map-e-beat-host.md
Plans/fase-3-modos-avancados/: 01-modo-bbd-bucket-brigade.md  02-modo-lofi-bit-crush-sample-rate.md  03-modo-reverse-crossfade.md  04-modo-granular-engine.md  05-modos-fractal-bloom-shards.md
Plans/fase-4-spectral-ducking/: 01-filterbank-8-bandas-analise-espectral.md  02-envelope-follower-banda-gain-computer.md  03-visualizacao-spectral-ducking-tempo-real.md
Plans/fase-5-post-fx-spatial/: 01-eq-parametrico-8-bandas-wet.md  02-tube-saturation-compressor.md  03-clipper-soft-hard-chorus.md  04-halo-widener-diffusal-bass-mono.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: FooterBar.cpp  FooterBar.h  HorizontalMetter.cpp  HorizontalMetter.h
Source/DSP/: CircularDelayBuffer.cpp  CircularDelayBuffer.h  DelayTempoMath.h  DspNumericGuards.h
Tests/: FractalDelayTests.cpp
scripts/: all-debug.bat  build-debug.bat  cmake-debug-cache-flags.bat  configure-ninja.bat  setup-vs-ninja.bat
